--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ sacrebleu==2.5.1
 safetensors==0.5.3
 scikit-learn==1.7.1
 scipy==1.15.3
+seaborn==0.13.2
 sentencepiece==0.2.0
 six==1.17.0
 sqlitedict==2.1.0
